[package]
name = "binance_connector"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.4.3"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
futures-util = "0.3.31"
rust_decimal = "1.36.0"
reqwest = "0.12.9"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
chrono = "0.4.39"
tokio-util = "0.7.13"
uuid = { version = "1.11.0", features = ["v4"] }